force-app/main/default/objects/Account/fields/P_License_Type__c.field-meta.xml
<CustomField>
    <fullName>P_License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Managers</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Pilot Pro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>