force-app/main/default/objects/Account/fields/P_License_Version__c.field-meta.xml
<CustomField>
    <fullName>P_License_Version__c</fullName>
    <label>License Version</label>
    <length>4</length>
    <type>Text</type>
</CustomField>