force-app/main/default/objects/Account/fields/P_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>P_of_Employees__c</fullName>
    <label># of Employees_P</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>