force-app/main/default/objects/Account/fields/Parent_Account_Hoovers__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Hoovers__c</fullName>
    <label>Parent Account - Hoovers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>