force-app/main/default/objects/Account/fields/Price_Group__c.field-meta.xml
<CustomField>
    <fullName>Price_Group__c</fullName>
    <inlineHelpText>RESELLER (Currently only Baker &amp; Taylor)
SERVICE (Currently only Microsoft)</inlineHelpText>
    <label>Price Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADKAR</fullName>
            </value>
            <value>
                <fullName>COMPLETE</fullName>
            </value>
            <value>
                <fullName>ECM</fullName>
            </value>
            <value>
                <fullName>MANAGER</fullName>
            </value>
            <value>
                <fullName>OCC</fullName>
            </value>
            <value>
                <fullName>AFFILIATE</fullName>
            </value>
            <value>
                <fullName>AFFTIER2</fullName>
            </value>
            <value>
                <fullName>ATP</fullName>
            </value>
            <value>
                <fullName>ATPTIER2</fullName>
            </value>
            <value>
                <fullName>RESELLER</fullName>
            </value>
            <value>
                <fullName>SERVICE</fullName>
            </value>
            <value>
                <fullName>PILOT</fullName>
            </value>
            <value>
                <fullName>2006</fullName>
            </value>
            <value>
                <fullName>2008</fullName>
            </value>
            <value>
                <fullName>2010</fullName>
            </value>
            <value>
                <fullName>STDDISC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>