force-app/main/default/objects/Account/fields/Professional_Services_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services_Agreement__c</fullName>
    <label>Professional Services Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>In Process - PSA only</fullName>
            </value>
            <value>
                <fullName>In Process - SOW only</fullName>
            </value>
            <value>
                <fullName>In Process - PSA &amp; SOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>