force-app/main/default/objects/Account/fields/prosci_portal_db_id__c.field-meta.xml
<CustomField>
    <fullName>prosci_portal_db_id__c</fullName>
    <label>Prosci Portal DB ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>