force-app/main/default/objects/Account/fields/Prosci_Taught_Programs__c.field-meta.xml
<CustomField>
    <fullName>Prosci_Taught_Programs__c</fullName>
    <label>Prosci Taught Programs</label>
    <length>10</length>
    <type>Text</type>
</CustomField>