force-app/main/default/objects/Account/fields/PSA_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>PSA_Contract_ID__c</fullName>
    <label>PSA Contract ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>