force-app/main/default/objects/Account/fields/PSA_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>PSA_Effective_Date__c</fullName>
    <label>PSA Effective Date</label>
    <type>Date</type>
</CustomField>