force-app/main/default/objects/Account/fields/PSA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PSA_Expiration_Date__c</fullName>
    <label>PSA Expiration Date</label>
    <type>Date</type>
</CustomField>