force-app/main/default/objects/Account/fields/Registration_Slug__c.field-meta.xml
<CustomField>
    <fullName>Registration_Slug__c</fullName>
    <label>Registration Slug</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>