force-app/main/default/objects/Account/fields/Related_Parent_Child_Contract_Affiliates__c.field-meta.xml
<CustomField>
    <fullName>Related_Parent_Child_Contract_Affiliates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Parent/Child Contract Affiliates</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>List of Approved Affiliates</relationshipLabel>
    <relationshipName>List_of_Approved_Affiliates</relationshipName>
    <type>Lookup</type>
</CustomField>