force-app/main/default/objects/Account/fields/Req_s_for_subcontracting_subcontractors__c.field-meta.xml
<CustomField>
    <fullName>Req_s_for_subcontracting_subcontractors__c</fullName>
    <label>Req&apos;s for subcontracting/subcontractors</label>
    <type>TextArea</type>
</CustomField>