force-app/main/default/objects/Account/fields/Requirements_for_sending_personnel_onsit__c.field-meta.xml
<CustomField>
    <fullName>Requirements_for_sending_personnel_onsit__c</fullName>
    <label>Requirements for sending personnel onsit</label>
    <type>TextArea</type>
</CustomField>