force-app/main/default/objects/Account/fields/Sales_1_Year_Growth__c.field-meta.xml
<CustomField>
    <fullName>Sales_1_Year_Growth__c</fullName>
    <label>Sales 1 Year Growth %</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>