force-app/main/default/objects/Account/fields/Strategic_Account_start_date__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_start_date__c</fullName>
    <label>Strategic Account Start date</label>
    <type>Date</type>
</CustomField>