force-app/main/default/objects/Account/fields/Total_of_programs__c.field-meta.xml
<CustomField>
    <fullName>Total_of_programs__c</fullName>
    <label>Total # of programs</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Onsite Services</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Done - Successful, Closed - Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>