force-app/main/default/objects/Account/fields/Tuesday_Night_Activity__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Night_Activity__c</fullName>
    <label>Tuesday Night Activity</label>
    <type>TextArea</type>
</CustomField>