force-app/main/default/objects/Account/fields/Tuesday_Team_Building_Activity__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Team_Building_Activity__c</fullName>
    <label>Tuesday Team Building Activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>