force-app/main/default/objects/Account/fields/Ultimate_Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Name__c</fullName>
    <label>Ultimate Parent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>