force-app/main/default/objects/Account/fields/Uses_SAML_Login__c.field-meta.xml
<CustomField>
    <fullName>Uses_SAML_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uses SAML Login</label>
    <type>Checkbox</type>
</CustomField>