force-app/main/default/objects/Account/fields/X1_YR_Historical_Spend__c.field-meta.xml
<CustomField>
    <fullName>X1_YR_Historical_Spend__c</fullName>
    <label>1 YR ago spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>