force-app/main/default/objects/Account/recordTypes/Prosci_Account.recordType-meta.xml
<RecordType>
    <fullName>Prosci_Account</fullName>
    <active>true</active>
    <label>Prosci Account</label>
</RecordType>