force-app/main/default/objects/Account/recordTypes/Prosci_Accounts.recordType-meta.xml
<RecordType>
    <fullName>Prosci_Accounts</fullName>
    <active>false</active>
    <label>Prosci Accounts</label>
</RecordType>