force-app/main/default/objects/Account/validationRules/Account_Country_2_Character.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Country_2_Character</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(BillingCountry)&gt;2</errorConditionFormula>
    <errorMessage>Company Country cannot be more than 2 characters</errorMessage>
</ValidationRule>