force-app/main/default/objects/Account/validationRules/Account_Name_50_Character.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_50_Character</fullName>
    <active>true</active>
    <description>This rule is to limit the # of character in the account name field</description>
    <errorConditionFormula>LEN(Name) &gt; 50</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The Account Name cannot be longer than 50 characters, shorten and use the Legal Name field to enter the complete Account Name</errorMessage>
</ValidationRule>