force-app/main/default/objects/Account/validationRules/Account_State_5_Character.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_State_5_Character</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(BillingState)&gt;5</errorConditionFormula>
    <errorMessage>Company State/Province cannot be more than 5 characters</errorMessage>
</ValidationRule>