force-app/main/default/objects/Account/validationRules/Changing_account_manager.validationRule-meta.xml
<ValidationRule>
    <fullName>Changing_account_manager</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name  &lt;&gt; &quot;System Administrator&quot;  
&lt;&gt; $Permission.Account_Manager_Edit_Rights 
 &amp;&amp; ISCHANGED( Account_Manager__c ) 
 &amp;&amp; NOT(ISBLANK(PRIORVALUE( Account_Manager__c )))</errorConditionFormula>
    <errorMessage>This field is restricted, email ictsupport@prosci.com to request changes</errorMessage>
</ValidationRule>