force-app/main/default/objects/Account/validationRules/Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Country_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(BillingCountry)</errorConditionFormula>
    <errorMessage>The country code is required, please enter to save this record</errorMessage>
</ValidationRule>