force-app/main/default/objects/Account/validationRules/Unspecified_Account_Block.validationRule-meta.xml
<ValidationRule>
    <fullName>Unspecified_Account_Block</fullName>
    <active>true</active>
    <errorConditionFormula>(( X18_Digit_CASESAFEID__c = &quot;001i000000PKt8zAAD&quot;) &amp;&amp;(ISCHANGED(Name)))</errorConditionFormula>
    <errorMessage>Cannot update the Unspecified account name. See your Admin for details.</errorMessage>
</ValidationRule>