force-app/main/default/objects/Account/listViews/All_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Industry__c</field>
        <operation>equals</operation>
        <value>Chemical Manufacturing,&quot;Energy, Oil, &amp; Gas&quot;,EXTRACTION OF PETROLEUM AND NATURAL GAS</value>
    </filters>
    <label>All Accounts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <portalRoleAndSubordinates>AdProChangeSystemsIncPartnerExecutive</portalRoleAndSubordinates>
        <portalRoleAndSubordinates>AdProChangeSystemsIncPartnerManager</portalRoleAndSubordinates>
        <portalRoleAndSubordinates>AdProChangeSystemsIncPartnerUser</portalRoleAndSubordinates>
    </sharedTo>
</ListView>