force-app/main/default/objects/Account/listViews/ATP.listView-meta.xml
<ListView>
    <fullName>ATP</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Authorized Training Provider</value>
    </filters>
    <label>ATP&apos;s</label>
</ListView>