force-app/main/default/objects/Account/listViews/Certifed_People.listView-meta.xml
<ListView>
    <fullName>Certifed_People</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>of_Certified_Employees__c</columns>
    <columns>License_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Certifed People</label>
</ListView>