force-app/main/default/objects/Account/listViews/KPMG_NZ.listView-meta.xml
<ListView>
    <fullName>KPMG_NZ</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>KPMG NZ</label>
</ListView>