force-app/main/default/objects/Account/listViews/People_Change_Accounts.listView-meta.xml
<ListView>
    <fullName>People_Change_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>da costa</value>
    </filters>
    <label>People Change Accounts</label>
    <sharedTo>
        <portalRoleAndSubordinates>PeopleChangePartnerExecutive</portalRoleAndSubordinates>
        <portalRoleAndSubordinates>PeopleChangePartnerManager</portalRoleAndSubordinates>
        <portalRoleAndSubordinates>PeopleChangePartnerUser</portalRoleAndSubordinates>
    </sharedTo>
</ListView>