force-app/main/default/objects/Account/listViews/Primary_Affiliates.listView-meta.xml
<ListView>
    <fullName>Primary_Affiliates</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>Price_Group__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Primary Affiliate</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Prosci_Account</value>
    </filters>
    <label>Primary Affiliates</label>
</ListView>