force-app/main/default/objects/Account/listViews/Prosci_Brasil_All_Accounts.listView-meta.xml
<ListView>
    <fullName>Prosci_Brasil_All_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Manager__c</field>
        <operation>equals</operation>
        <value>Fabiano Guimaraes Nascimento</value>
    </filters>
    <label>Prosci Brasil - All Accounts</label>
</ListView>