force-app/main/default/objects/Account/listViews/Prosci_Canada_Accounts.listView-meta.xml
<ListView>
    <fullName>Prosci_Canada_Accounts</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8 OR 9</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Manager__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>account_manager_email__c</columns>
    <columns>account_manager_name__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>lall</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>nsibl</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>hlync</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>rstew</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>aable</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>pmaho</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>ksiev</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>csiev</value>
    </filters>
    <filters>
        <field>Account_Manager__c</field>
        <operation>equals</operation>
        <value>Kirk Sievert</value>
    </filters>
    <label>Prosci Canada - All Accounts</label>
    <sharedTo>
        <group>Prosci_Canada</group>
    </sharedTo>
</ListView>