force-app/main/default/objects/Account/listViews/Prosci_Canada_All_Accounts_Try_2.listView-meta.xml
<ListView>
    <fullName>Prosci_Canada_All_Accounts_Try_2</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Manager__c</field>
        <operation>equals</operation>
        <value>Kirk Sievert</value>
    </filters>
    <label>Prosci Canada - All Accounts Try #2</label>
    <sharedTo>
        <group>Prosci_Canada</group>
    </sharedTo>
</ListView>