force-app/main/default/objects/Account/listViews/Sam_White_Account.listView-meta.xml
<ListView>
    <fullName>Sam_White_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAV_Customer__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>account_manager_name__c</field>
        <operation>contains</operation>
        <value>White</value>
    </filters>
    <label>Samantha White Accounts</label>
</ListView>