force-app/main/default/objects/Account/listViews/Unassigned_Accounts.listView-meta.xml
<ListView>
    <fullName>Unassigned_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Manager__c</field>
        <operation>contains</operation>
        <value>ann</value>
    </filters>
    <label>Unassigned Accounts</label>
</ListView>