force-app/main/default/objects/Account/listViews/WSP_Australia.listView-meta.xml
<ListView>
    <fullName>WSP_Australia</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>WSP Australia</label>
</ListView>